# Source-Stitcher

./: .gitignore  LICENSE  LOGGING_CHECKLIST.md  LOGGING_ENHANCEMENT_PLAN.md  README.md  language_definitions.toml  main.py  pyproject.toml  requirements.txt  source-stitcher.py
.windsurf/rules/: asd.md
src/: __init__.py  config.py  file_utils.py  language_definitions.py  logging_config.py  main_window.py  version.py  worker.py
src/cli/: __init__.py  config.py  info.py  parser.py  progress.py  runner.py
src/core/: __init__.py  file_counter.py  file_processor.py  file_reader.py  file_walker.py  language_loader.py  output_builder.py  tree_generator.py
src/source_stitcher/: config.py  file_utils.py  language_definitions.py  logging_config.py  main.py  version.py  worker.py
src/source_stitcher/cli/: config.py  info.py  parser.py  progress.py  runner.py
src/source_stitcher/core/: file_walker.py  language_loader.py  output_builder.py  tree_generator.py
src/source_stitcher/ui/: __init__.py  dialogs.py  main_window.py
src/ui/: __init__.py  dialogs.py  main_window.py
