[project]
name = "source-stitcher"
version = "0.5.0"
description = "Source Stitcher seamlessly combines multiple files into a single, unified markdown document. Save time and effort by effortlessly merging code, text, and other file types."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathspec",
    "PyQt6", 
    "atomicwrites"
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
]
