[project]
name = "source-stitcher"
version = "0.6.0b1"
description = "Source Stitcher seamlessly combines multiple files into a single, unified markdown document. Save time and effort by effortlessly merging code, text, and other file types."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathspec",
    "PyQt6", 
    "atomicwrites",
    "tomli>=1.2.0; python_version<'3.11'"
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
]
